# Diplom_python

./: 0001_initial.py  0002_remove_game_categories_favorite_delete_category.py  0003_remove_game_is_game_of_year_remove_game_is_new_and_more.py  0004_game_steam_review_status.py  0005_game_steam_appid.py  0006_game_steam_review_count_game_steam_review_percent.py  0007_category_remove_game_category_game_categories.py  0008_alter_torrentfile_file.py  0009_alter_torrentfile_game_comment.py  README.md  add_default_categories.py  add_default_tags.py  admin.py  asgi.py  catalog_extras.py  game_detail.html  games_list.txt  import_games_from_txt.py  index.html  login.html  main.css  manage.py  models.py  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  pyproject.toml  register.html  search_results.html  settings.py  tags_list.html  update_steam_reviews.py  upload_cover.html  upload_torrent.html  urls.py  views.py  wsgi.py
